samples/_failures_safe/1761505464_843b80_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_987b9a32.c: In function ‘parse_expression’:
./samples/SAFE/__tmp_987b9a32.c:166:13: error: expected expression at end of input
  166 |             if (right > 0 && left < INT_MIN + right) return
      |             ^~
./samples/SAFE/__tmp_987b9a32.c:166:13: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_987b9a32.c:166:13: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_987b9a32.c:166:13: error: expected declaration or statement at end of input
